--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>My cats</title>
     <style>
-        #main-heder{
+        #main-heder {
             font-size: 200px;
-
         }
-        h1.another{
+
+        h1.another {
             color: red;
             font-size: 60;
             font-family: 'Courier New', Courier, monospace;
@@ -23,10 +23,10 @@
             height: 75px;
             padding: calc(2);
         }
-        h1{
+        h1 {
             color: red;
         }
-        p{
+        p {
             color: white;
             background-color: black;
             display: inline-block;
@@ -34,11 +34,10 @@
         }
     </style>
 </head>
-
 <body>
-    <h1 id="main-heder">Това са моите котенца ...</h1>
+    <h1 id="main-heder">This is my cats ...</h1>
     <h1 class="another">
-        Normalni kotenca</h1>
+        Normal Cats</h1>
     <p><img src="cats/cat.jpg" alt="">
         <img src="cats/cat.jpg" alt="">
         <img src="cats/cat.jpg" alt="">
@@ -76,41 +75,41 @@
     </p>
 
     <p>
-        <table >
-            <tr>
-                <td style="border: 1px solid black;">1</td>
-                <td #main-heder>2</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-            </tr>
-        </table>
+    <table>
+        <tr>
+            <td style="border: 1px solid black;">1</td>
+            <td #main-heder>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+    </table>
     </p>
     <p>
-        <form>
-            <input type="range" />
-        </form>
+    <form>
+        <input type="range" />
+    </form>
     </p>
     <p>
-        <ol>
-            <li>First Step
-                <ul>
-                    <li>One</li>
-                    <li>Two</li>
-                    <li>Three</li>
-                        <ol>
-                            <li>Nested One</li>
-                            <li>Nested Two</li>
-                            <li>Nested Threer</li>
-                        </ol>
-                </ul>
-            </li>
-        </ol>
+    <ol>
+        <li>First Step
+            <ul>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+                <ol>
+                    <li>Nested One</li>
+                    <li>Nested Two</li>
+                    <li>Nested Threer</li>
+                </ol>
+            </ul>
+        </li>
+    </ol>
     </p>
-    <p>Е няма повече котита :) </p>
+    <p>No more cats :)</p>
 </body>
 
 </html>
